Re-aligned calc & fixed hidden txt bug

--- a/app/styles/ageGradeMain.css
+++ b/app/styles/ageGradeMain.css
@@ -14,7 +14,7 @@
   border-radius: 0px 16px 0px 0px;
   margin: 0px;
   box-shadow: -1px 1px 3px 0.5px #888;
-  z-index: 1;
+  z-index: 2;
 }
 
 
@@ -47,7 +47,7 @@
   -webkit-box-shadow: -4px 3px 15px -4px rgba(0,0,0,0.68);
   -moz-box-shadow: -4px 3px 15px -4px rgba(0,0,0,0.68);
   box-shadow: -4px 3px 15px -4px rgba(0,0,0,0.68);
-  margin-top: 5px;
+  margin-top: -1px;
   padding: 5px;
   border-radius: 10px;
   height: 420px;
@@ -115,7 +115,7 @@
 
 .calcButton {
     width: 70%;
-    height: 70px;
+    height: 50px;
     color: #51c64f;
     border: 1px solid #434343;
     background: #434343;
@@ -156,7 +156,7 @@
 
 .clearButton {
     width: 118px;
-    height: 50px;
+    height: 35px;
     color: #CC0000;
     border: 1px solid #434343;
     background: #434343;
