--- a/app/styles/errHandling.css
+++ b/app/styles/errHandling.css
@@ -25,7 +25,7 @@
 	position: relative;
 	background-color: rgba(0, 0, 0, 0);
 	z-index: 1;
-	left: 119px;
+	left: 54px;
 	padding: 13px 0px 12px 0px;
 	border-radius: 5px;
 	border: 1px solid #CC0000;
@@ -38,7 +38,7 @@
 	position: relative;
 	background-color: rgba(0, 0, 0, 0);
 	z-index: 1;
-	left: 119px;
+	left: 54px;
 	padding: 13px 0px 12px 0px;
 	padding-right: 0px;
 	border-radius: 5px;
@@ -62,10 +62,10 @@
 
 .genCheckErr {
 	position: relative;
-	left: 100px;
+	left: 35px;
   	border: 1px solid #CC0000;
   	border-radius: 5px;
-  	padding: 10px 0px 10px 0px;
+  	padding: 11px 0px 10px 0px;
   	transition: all .15s cubic-bezier(.27,1,1,.9);
 	visibility: visible;
 
@@ -74,21 +74,26 @@
 
 .genCheckErrInvis {
 	position: relative;
-	left: 100px;
+	left: 35px;
   	border: 1px solid #CC0000;
   	border-radius: 5px;
-  	padding: 10px 0px 10px 0px;
+  	padding: 11px 0px 10px 0px;
   	transition: all .15s cubic-bezier(.27,1,1,.9);
 	visibility: collapse;
 }
 
 .errWarning {
-	padding-top: 7px;
-	margin-bottom: 25px;
-	width: 280px;
+	position: relative;
+	left: 85px;
+	width: 75%;
 	height: 60px;
 	background: #ffa0a0;
 	text-align: center;
 	box-shadow: -2px 2px 7px 2px #888;
 	border-radius: 10px;
+}
+
+.errWarning > div {
+	padding-top: 8px;
+
 }
