--- a/app/styles/main2.css
+++ b/app/styles/main2.css
@@ -134,12 +134,12 @@ h3 {
 
 #move1 {
   position: relative;
-  left: 128px;
+  left: 63px;
 }
 
 #move2 {
   position: relative;
-  left: 115px;
+  left: 50px;
 	
 }
 
